--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.13.0",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.536.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
