--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,10 +48,14 @@ jobs:
         working-directory: frontend
         run: cp dist/index.html dist/404.html
 
+      - name: Setup GitHub Pages
+        uses: actions/configure-pages@v5
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: frontend/dist
+          name: github-pages
 
   deploy:
     runs-on: ubuntu-latest
