--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
+    "psycopg[binary]>=3.2.9",
+    "python-dotenv>=1.1.1",
+    "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
