Env examples updated and added some new pages to the frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,26 +1,21 @@
 # OneTee Backend Environment Configuration
 
 # Server Configuration
-HOST="0.0.0.0"
-PORT="8000"
+HOST="hostname"
+PORT="port_number"
 
 # Database Configuration
-POSTGRES_PASSWORD="onetee_password"
-POSTGRES_DB="onetee_db"
-POSTGRES_USER="onetee_user"
-POSTGRES_HOST="localhost"
-POSTGRES_PORT="5432"
+POSTGRES_PASSWORD="your_password"
+POSTGRES_DB="your_db_name"
+POSTGRES_USER="your_username"
+POSTGRES_HOST="hostname"
+POSTGRES_PORT="port_number"
 
-# Application Configuration
-SECRET_KEY="your-secret-key-here-change-in-production"
-DEBUG="True"
-ENVIRONMENT="development"
+# MINIO
+MINIO_ENDPOINT="hostname:port_number"
+MINIO_ROOT_USER="minioadmin"
+MINIO_ROOT_PASSWORD="your_password"
+MINIO_SECURE="false"
 
-# CORS Configuration
-CORS_ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000"
-CORS_ALLOWED_METHODS="GET,POST,PUT,DELETE,OPTIONS"
-CORS_ALLOWED_HEADERS="*"
-
-# Logging Configuration
-LOG_LEVEL="INFO"
-LOG_FILE="logs/app.log" 
+# Environment
+ENVIRONMENT=development
