--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,7 +4,10 @@
 VITE_COMING_SOON=false
 
 # Contact email for the coming soon page
-VITE_CONTACT_EMAIL=hello@onetee.com
+VITE_CONTACT_EMAIL=<your_email_address
+
+# backend api endpoint base url
+VITE_API_URL=your_base_url
 
 # social media links
 # VITE_TWITTER_URL=https://twitter.com/onetee
