--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,4 +17,5 @@ dependencies = [
     "pyjwt[crypto]>=2.9.0",
     "email-validator>=2.2.0",
     "stripe>=11.3.0",
+    "python-multipart>=0.0.20",
 ]
