--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,6 +24,20 @@ services:
     volumes:
       - ./minio_data:/data
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: onetee-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@onetee.in}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+    ports:
+      - "5050:80"
+    volumes:
+      - ./pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - postgres
+
 volumes:
   postgres_data:
   minio_data:
+  pgadmin_data:
