Running main file through uv now

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -45,4 +45,4 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/ || exit 1
 
 # Run the application
-CMD ["python3", "main.py"]
+CMD ["uv", "run", "python3", "main.py"]
